--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,25 @@
-netCDF4
-matplotlib
-boto3
-botocore
-certifi
-requests
-urllib3
-pillow
-numpy
-bs4
+netCDF4~=1.5.7
+matplotlib~=3.4.3
+boto3~=1.18.38
+botocore~=1.21.38
+certifi~=2021.5.30
+requests~=2.26.0
+urllib3~=1.26.6
+pillow~=8.3.2
+numpy~=1.21.2
+bs4~=0.0.1
+jmespath~=0.10.0
+beautifulsoup4~=4.9.3
+soupsieve~=2.2.1
+pip~=21.2.4
+s3transfer~=0.5.0
+setuptools~=57.0.0
+wheel~=0.36.2
+six~=1.16.0
+python-dateutil~=2.8.2
+idna~=3.2
+cycler~=0.10.0
+Jinja2~=3.1.2
+pyparsing~=2.4.7
+kiwisolver~=1.3.1
+Pydap~=3.2.2
